[project]
name = "mlexps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.35.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "polars>=1.35.2",
    "protobuf>=6.33.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torch-vision>=0.1.6.dev0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]
